syntax = "proto3";

package infrastructure.api;

service History {
  rpc Find(PatientRequest) returns (PatientResponse);
}

message PatientRequest {
  string name = 1;
}

message PatientResponse {
  repeated Patient patient = 1;
}

message Patient {
  string name = 1;
}
